fix: CLS 성능 개선 및 favicon 호환성 강화

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ layout: default
           <circle cx="12" cy="12" r="10"/>
           <polyline points="12 6 12 12 16 14"/>
         </svg>
-        <span id="reading-time"></span>
+        <span id="reading-time" style="min-width:4em;display:inline-block">&nbsp;</span>
       </span>
 
       <span class="meta-item" itemprop="author" itemscope itemtype="http://schema.org/Person">
