--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<a href="#main-content" class="skip-link" aria-label="Skip to main content">Skip to main content</a>
 <header class="site-header">
   <div class="container">
     <div class="header-inner">
