feat: 피드백 및 뉴스레터 구독 버튼 왼쪽 하단 배치
- 플로팅 Buttondown 구독 버튼 추가 (bottom-left, Sentry 피드백 위)
- 반응형 처리 (모바일 크기 조정)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   </main>
 
   {% include footer.html %}
+  {% include subscribe-float.html %}
   {% include chat-widget.html %}
   <!-- Chat widget is loaded on-demand when user interacts -->
   <script>
